...
        clearButton(
            onAction = onAction,
            useHaptics = useHaptics,
            minSize = minSize
                .fillMaxWidth()
                .semanticSetup()
                .testTag("deleteAC"),
        )

        item(span = { GridItemSpan(maxCurrentLineSpan - 1) }) {}

        /*undoButton(
            canUndo = canUndo,
...
        deleteButton(
            onAction = onAction,
            useHaptics = useHaptics,
            minSize = minSize
                .fillMaxWidth()
                .semanticSetup()
                .testTag("delete"),
        )

        giveUpButton(
            showRestart = showRestart,
            onRestart = onRestart,
            onGiveUp = onGiveUp,
            useHaptics = useHaptics,
            minSize = minSize
                .fillMaxWidth()
                .semanticSetup()
                .testTag("GiveUpButton"),
        )

        noSolveButton(
            isHardMode = isHardMode,
            showRestart = showRestart,
            noSolve = noSolve,
            useHaptics = useHaptics,
            minSize = minSize
                .fillMaxWidth()
                .semanticSetup()
                .testTag("Solution"),
        )

        item(span = { GridItemSpan(maxCurrentLineSpan - 1) }) {}

        submitButton(
            showRestart = showRestart,
            canSubmit = canSubmit,
            onSubmit = onSubmit,
            useHaptics = useHaptics,
            minSize = minSize
                .fillMaxWidth()
                .semanticSetup()
                .testTag("Submit"),
        )
    }
}

fun LazyGridScope.submitButton(
    showRestart: Boolean,
...
    CalculatorUiAction(
        text = "÷",
        highlightLevel = HighlightLevel.SemiHighlighted,
        action = CalculatorAction.Op(Operation.DIVIDE),
        modifier = Modifier
            .semanticSetup()
            .testTag("Divide"),
    ),
    CalculatorUiAction(
        text = "x",
        highlightLevel = HighlightLevel.SemiHighlighted,
        action = CalculatorAction.Op(Operation.MULTIPLY),
        modifier = Modifier
            .semanticSetup()
            .testTag("Multiply"),
    ),
    CalculatorUiAction(
        text = "-",
        highlightLevel = HighlightLevel.SemiHighlighted,
        action = CalculatorAction.Op(Operation.SUBTRACT),
        modifier = Modifier
            .semanticSetup()
            .testTag("Subtract"),
    ),
    CalculatorUiAction(
        text = "+",
        highlightLevel = HighlightLevel.SemiHighlighted,
        action = CalculatorAction.Op(Operation.ADD),
        modifier = Modifier
            .semanticSetup()
            .testTag("Add"),
    ),
    CalculatorUiAction(
        text = "()",
        highlightLevel = HighlightLevel.SemiHighlighted,
        action = CalculatorAction.Parentheses,
        modifier = Modifier
...
